Add copyright icon

--- a/excursion/index.html
+++ b/excursion/index.html
@@ -22,6 +22,6 @@
 		<a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html#"
 			>Download Excursion (Coming soon!)</a
 		>
-		<p>C Excursion</p>
+		<p id="copyright">&copy; Excursion</p>
 	</footer>
 </body>
