--- a/excursion/index.html
+++ b/excursion/index.html
@@ -10,8 +10,8 @@
 	>
 </header>
 <body>
-	<video src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4"></video>
-	<section>
+        <video src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" autoplay loop muted></video>
+    <section>
 		<h2>Your personal travel guide</h2>
 		<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
 		<img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="CampPicture" />
