--- a/excursion/index.html
+++ b/excursion/index.html
@@ -5,19 +5,28 @@
 </html>
 <header>
 	<h1>Discover hidden places in the world around you</h1>
-	<a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html#"
-		>Download Excursion (Coming soon!)</a
-	>
+	<p>
+		<a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html#"
+			>Download Excursion (Coming soon!)</a
+		>
+	</p>
 </header>
 <body>
-        <video src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" autoplay loop muted></video>
-    <section>
+	<video
+		src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4"
+		autoplay
+		loop
+		muted
+	></video>
+	<section>
 		<h2>Your personal travel guide</h2>
 		<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
 		<img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="CampPicture" />
 	</section>
 	<footer>
-		<img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="Phone Icon" />
+		<p>
+			<img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="Phone Icon" />
+		</p>
 		<h2>Coming Soon for iPhone and Android</h2>
 		<a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html#"
 			>Download Excursion (Coming soon!)</a
