Change euro sign to HTML Entity Code

--- a/OBStest/index.html
+++ b/OBStest/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="window">
-        <h1 id="budget">This meeting is costing € 0.00</h1>
+        <h1 id="budget">This meeting is costing &euro; 0.00</h1>
     </div><button id="reset">Reset Budget</button>
  </body>
 
