Setup basic html framework

--- a/flexbox-business-site-starting/index.html
+++ b/flexbox-business-site-starting/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  </head>
 
-  <body>
-    
-  </body>
+<head>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/style.css" type="text/css" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <img src=logo alt="logo">
+    <ul>
+      <li>About</li>
+      <li>Team</li>
+      <li>Contact</li>
+    </ul>
+  </header>
+  <section class="hero">
+    <div class="hero-container">
+      <img src="logo" alt="logo">
+      <h1>Catchy message</h1>
+      <p>Mission statement with short description</p>
+      <button>Request Demo</button>
+    </div>
+  </section>
+
+  <section class="about">
+    <h1>About</h1>
+    <img src="" alt="">
+    <p>
+    <ul>
+      <li>Statement 1</li>
+      <li>Statement 2</li>
+      <li>Statement 3</li>
+    </ul>
+    </p>
+  </section>
+
+  <section class="team">
+    <figure><img src="" alt="">
+      <figcaption>Stefan Koenders</figcaption>
+      <figcaption>Thomas Erdmann</figcaption>
+    </figure>
+  </section>
+
+  <footer>
+    <h3>Contact us</h3>
+    <h5>Copyright stuff</h5>
+  </footer>
+</body>
+
 </html>
