Submit end of day 1

--- a/flexbox-business-site-starting/index.html
+++ b/flexbox-business-site-starting/index.html
@@ -5,48 +5,70 @@
 <head>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/style.css" type="text/css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan&family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
   <header>
-    <img src=logo alt="logo">
-    <ul>
-      <li>About</li>
-      <li>Team</li>
-      <li>Contact</li>
-    </ul>
+    <a href="#"><img src=/images/RMClogoWhite.png alt="logo"></a>
+    <nav>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
   </header>
+
   <section class="hero">
     <div class="hero-container">
-      <img src="logo" alt="logo">
-      <h1>Catchy message</h1>
-      <p>Mission statement with short description</p>
+      <img src="/images/RMClogoWhite.png" alt="logo">
+      <h1>Monitor your talents, quick and easy! </h1>
+      <p>Give your director, producer, editor in chief or client full access to individually monitor all available audio
+        sources during your production and let them focus on directing the story. Save precious time in post production
+        by logging
+        live, whilst the action takes place.</p>
       <button>Request Demo</button>
     </div>
   </section>
 
   <section class="about">
-    <h1>About</h1>
-    <img src="" alt="">
-    <p>
-    <ul>
-      <li>Statement 1</li>
-      <li>Statement 2</li>
-      <li>Statement 3</li>
-    </ul>
-    </p>
+    <div class="container">
+      <div class="about-container">
+        <h2>About RMC</h2>
+        <ul>
+          <li>Accessible and easy to operate for all types of users. </li>
+          <li>Monitor up to 32 channels of audio.</li>
+          <li>Switch on the fly with three custom presets.</li>
+          <li>Spend less time in postproduction and more time telling stories.</li>
+        </ul>
+      </div>
+      <img src="/images/about.jpg" alt="about">
+    </div>
   </section>
 
   <section class="team">
-    <figure><img src="" alt="">
-      <figcaption>Stefan Koenders</figcaption>
-      <figcaption>Thomas Erdmann</figcaption>
-    </figure>
+    <div class="overlay">
+      <h2>Our Team</h2>
+      <div class="team-container">
+        <div>
+          <img src="/images/stefan.jpg" alt="Stefan Koenders">
+          <figcaption>Stefan Koenders</figcaption>
+          <figcaption> <a href="#">@stefankoenders</a> </figcaption>
+        </div>
+        <div>
+          <img src="/images/thomas.jpg" alt="Thomas Erdmann">
+          <figcaption>Thomas Erdmann</figcaption>
+          <figcaption> <a href="#">@thomaserdmann</a> </figcaption>
+
+        </div>
+      </div>
+    </div>
   </section>
 
   <footer>
-    <h3>Contact us</h3>
-    <h5>Copyright stuff</h5>
+    <h5>Copyright Innofy &copy; 2022 </h5>
   </footer>
 </body>
 
