--- a/flexbox-business-site-starting/index.html
+++ b/flexbox-business-site-starting/index.html
@@ -4,14 +4,14 @@
 
 <head>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/style.css" type="text/css" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan&family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <header>
-    <a href="#"><img src=/images/RMClogoWhite.png alt="logo"></a>
+    <a href="#"><img src="./images/RMClogoWhite.png" alt="logo"></a>
     <nav>
       <ul>
         <li><a href="#">About</a></li>
@@ -23,7 +23,7 @@
 
   <section class="hero">
     <div class="hero-container">
-      <img src="/images/RMClogoWhite.png" alt="logo">
+      <img src="./images/RMClogoWhite.png" alt="logo">
       <h1>Monitor your talents, quick and easy! </h1>
       <p>Give your director, producer, editor in chief or client full access to individually monitor all available audio
         sources during your production and let them focus on directing the story. Save precious time in post production
@@ -44,7 +44,7 @@
           <li>Spend less time in postproduction and more time telling stories.</li>
         </ul>
       </div>
-      <img src="/images/about.jpg" alt="about">
+      <img src="./images/about.jpg" alt="about">
     </div>
   </section>
 
@@ -53,12 +53,12 @@
       <h2>Our Team</h2>
       <div class="team-container">
         <div>
-          <img src="/images/stefan.jpg" alt="Stefan Koenders">
+          <img src="./images/stefan.jpg" alt="Stefan Koenders">
           <figcaption>Stefan Koenders</figcaption>
           <figcaption> <a href="#">@stefankoenders</a> </figcaption>
         </div>
         <div>
-          <img src="/images/thomas.jpg" alt="Thomas Erdmann">
+          <img src="./images/thomas.jpg" alt="Thomas Erdmann">
           <figcaption>Thomas Erdmann</figcaption>
           <figcaption> <a href="#">@thomaserdmann</a> </figcaption>
 
