--- a/club-website/index.html
+++ b/club-website/index.html
@@ -36,17 +36,17 @@
         <div class="tastings-container">
             <div class="tasting-block" id="beer">
                 <div class="tasting-name">
-                    <h2>Beer</h2>
+                    <h3>Beer</h3>
                 </div>
             </div>
             <div class="tasting-block" id="wine">
                 <div class="tasting-name">
-                    <h2>Wine</h2>
+                    <h3>Wine</h3>
                 </div>
             </div>
             <div class="tasting-block" id="coffee">
                 <div class="tasting-name">
-                    <h2>Coffee</h2>
+                    <h3>Coffee</h3>
                 </div>
             </div>
         </div>
@@ -60,9 +60,18 @@
     </section>
 
     <section class="event">
+        <div class="event-container">
+            <img src="./images/schedule.png" alt="schedule-icon">
+            <h2>Events</h2>
+            <p>Meet us at one of our open events and experience good food paired with great company. No prior knowledge
+                is required. All you need is a passion for fine dining.</p>
+        </div>
+        <button>Join Us Now!</button>
 
     </section>
-    <footer></footer>
+    <footer>
+        <h5>Copyright The Fine Dine Society &copy; 2022 </h5>
+    </footer>
 
 </body>
 
